updated the frame layout and fix bug

--- a/Streamee.html
+++ b/Streamee.html
@@ -841,10 +841,11 @@
             id: 4,
             title: "Peaches",
             artist: "Justin Bieber",
-            cover: <img src="peaches.jpg"
+            cover: "peaches.jpg",
             duration: "3:18",
             lyrics: "I get my light right from the source\nYeah, yeah (Ooh, that's right)\nAnd that source is you\nYeah, yeah\n\nI've been riding with you for six summers (Six summers)\nYeah, but I want 'em all (All)\nI got my eyes on you (I got my eyes on you)\nYou're everything I see\nI want your hot love and emotion, endlessly\nI can't get over you\nYou left your mark on me, on me\n\nI got my peach down in Georgia (Oh, yeah, yeah)\nI get my weed up in California (Oh, yeah, yeah)"
         }
+    ]; // <-- Close the tracks array properly here
 
     // Current playing track
     let currentTrack = 0;
