made changes for the website wasnt opening from github

--- a/Streamee.html
+++ b/Streamee.html
@@ -596,7 +596,7 @@
         <h2 class="section-title">Recently Played</h2>
         <div class="tracks-grid">
             <div class="track-card" onclick="openTrackModal(0)">
-                <img src="The_Weeknd_-_Blinding_Lights.png" alt="Track Cover" class="track-cover">
+                <img src="https://i.scdn.co/image/ab67616d0000b273bb54dde68cd23e2a268ae0f5" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -606,7 +606,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(1)">
-                <img src="a3820555646_5.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://i.scdn.co/image/ab67616d0000b273c8b444df094279e70d0ed856" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -616,7 +616,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(2)">
-                <img src="ab67616d0000b2738863bc11d2aa12b54f5aeb36.jpeg" alt="Track Cover" class="track-cover">
+                <img src="https://i.scdn.co/image/ab67616d0000b2734aeaaeeb0755f5d6d3e8492d" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -626,7 +626,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(3)">
-                <img src="1900x1900-000000-80-0-0.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://i.scdn.co/image/ab67616d0000b2738532ebe5f6834755695a0c1a" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -636,7 +636,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(4)">
-                <img src="peaches.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/Justin_Bieber_-_Peaches.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -646,7 +646,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(5)">
-                <img src="The_Kid_Laroi_and_Justin_Bieber_-_Stay.png" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/The_Kid_Laroi_and_Justin_Bieber_-_Stay.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -660,7 +660,7 @@
         <h2 class="section-title now-playing">Made For You</h2>
         <div class="tracks-grid">
             <div class="track-card" onclick="openTrackModal(6)">
-                <img src="1900x1900-000000-80-0-0.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://i.scdn.co/image/ab67616d0000b2738532ebe5f6834755695a0c1a" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -670,7 +670,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(7)">
-                <img src="Harry_Styles_-_As_It_Was.png" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/9/9c/Harry_Styles_-_As_It_Was.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -680,7 +680,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(8)">
-                <img src="1900x1900-000000-80-0-0%20(1).jpg" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/0/0a/Harry_Styles_-_Watermelon_Sugar.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -690,7 +690,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(9)">
-                <img src="bts_dynamite_album_cover_by_sivan67_de3oi68-fullview.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/9/9c/BTS_-_Dynamite_%28official_cover%29.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -700,7 +700,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(10)">
-                <img src="500x500.jpg" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/1/1e/Post_Malone_and_Swae_Lee_-_Sunflower.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -710,7 +710,7 @@
                 </div>
             </div>
             <div class="track-card" onclick="openTrackModal(11)">
-                <img src="edsgeern.jpeg" alt="Track Cover" class="track-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/en/4/45/Ed_Sheeran_-_Bad_Habits.png" alt="Track Cover" class="track-cover">
                 <div class="track-play-btn">
                     <i class="fas fa-play"></i>
                 </div>
@@ -726,7 +726,7 @@
 <!-- Player -->
 <div class="player">
     <div class="player-track">
-        <img src="The_Weeknd_-_Blinding_Lights.png" alt="Track Cover" class="player-cover">
+        <img src="https://i.scdn.co/image/ab67616d0000b273bb54dde68cd23e2a268ae0f5" alt="Track Cover" class="player-cover">
         <div class="player-track-info">
             <div class="player-track-title">Blinding Lights</div>
             <div class="player-track-artist">The Weeknd</div>
@@ -841,7 +841,7 @@
             id: 4,
             title: "Peaches",
             artist: "Justin Bieber",
-            cover: "peaches.jpg",
+            cover: "https://upload.wikimedia.org/wikipedia/en/5/5e/Justin_Bieber_-_Peaches.png",
             duration: "3:18",
             lyrics: "I get my light right from the source\nYeah, yeah (Ooh, that's right)\nAnd that source is you\nYeah, yeah\n\nI've been riding with you for six summers (Six summers)\nYeah, but I want 'em all (All)\nI got my eyes on you (I got my eyes on you)\nYou're everything I see\nI want your hot love and emotion, endlessly\nI can't get over you\nYou left your mark on me, on me\n\nI got my peach down in Georgia (Oh, yeah, yeah)\nI get my weed up in California (Oh, yeah, yeah)"
         }
